--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ Les plateformes exotiques sont concernées en premier lieu : navigateurs mobiles
     header
     {
         text-align: center;
+        margin-bottom: 50px;
     }
     aside
     {
